Change in the adsense

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@ header-img: "img/contact-bg.jpg"
     <br>
     <div id="success"></div>
     <div class="row">
-        <div class="form-group col-xs-12">
+        <div class="form-group col-xs-12"z>
             <button type="submit" class="btn btn-default">Send</button>
         </div>
     </div>
