Adding new blog

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: "About Me"
 description: "Here's What I Do"
 header-img: "img/about-bg.jpg"
 ---
-
+<script type='text/javascript' src='//eclkmpbn.com/adServe/banners?tid=98477_161886_3&type=footer&size=468x60'></script>
 <p>I am a Security enthusiast and website devolper in kerala, India. I am member of team bi0s. </p>
 
 <p>I like to make website and destroy it!</p>
