--- a/about.html
+++ b/about.html
@@ -4,6 +4,19 @@ title: "About Me"
 description: "Here's What I Do"
 header-img: "img/about-bg.jpg"
 ---
+<script type="text/javascript">
+amzn_assoc_placement = "adunit0";
+amzn_assoc_enable_interest_ads = "true";
+amzn_assoc_tracking_id = "i0d04-20";
+amzn_assoc_ad_mode = "auto";
+amzn_assoc_ad_type = "smart";
+amzn_assoc_marketplace = "amazon";
+amzn_assoc_region = "US";
+amzn_assoc_textlinks = "";
+amzn_assoc_linkid = "c3f86457c3e8c77f6bf73bc3c07e618f";
+amzn_assoc_emphasize_categories = "13900861,2335752011,13900871";
+</script>
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 <script type='text/javascript' src='//eclkmpbn.com/adServe/banners?tid=98477_161886_3&type=footer&size=468x60'></script>
 <p>I am a Security enthusiast and website devolper in kerala, India. I am member of team bi0s. </p>
 
