--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ amzn_assoc_emphasize_categories = "13900861,2335752011,13900871";
 </script>
 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 <script type='text/javascript' src='//eclkmpbn.com/adServe/banners?tid=98477_161886_3&type=footer&size=468x60'></script>
-<p>I am a Security enthusiast and website devolper in kerala, India. I am member of team bi0s. </p>
+<p>I am a Security enthusiast and website developer in kerala, India. I am member of team bi0s. </p>
 
 <p>I like to make website and destroy it!</p>
 
