--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@ amzn_assoc_emphasize_categories = "13900861,2335752011,13900871";
 
 <p>Vulnerable Web Application</p>
 <a href="https://sourceforge.net/projects/bwapp/">1. bWAPP</a><br>
-<a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3mY3A8bTOAhULpo8KHQpdA5cQFggfMAA&url=https%3A%2F%2Fwebseclab-gae.appspot.com%2F&usg=AFQjCNHHdsCSZZ10z-s-jLHdlDzVxbSL6w&sig2=4ShOOooe7Ab3xBf5w9-ALw&bvm=bv.129389765,d.c2I">2. WebSec Labs</a>
-<a href="https://github.com/WebGoat/WebGoat">3. Web Goat</a>
-<a href="http://www.dvwa.co.uk/">4. DVWA</a>
-<a href="https://github.com/snoopythesecuritydog/dvws">5. DVWS</a>
+<a href="https://www.google.co.in/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi3mY3A8bTOAhULpo8KHQpdA5cQFggfMAA&url=https%3A%2F%2Fwebseclab-gae.appspot.com%2F&usg=AFQjCNHHdsCSZZ10z-s-jLHdlDzVxbSL6w&sig2=4ShOOooe7Ab3xBf5w9-ALw&bvm=bv.129389765,d.c2I">2. WebSec Labs</a><br>
+<a href="https://github.com/WebGoat/WebGoat">3. Web Goat</a><br>
+<a href="http://www.dvwa.co.uk/">4. DVWA</a><br>
+<a href="https://github.com/snoopythesecuritydog/dvws">5. DVWS</a><br>
 
 <p>Send me more resource, If you know. We will add it.</p>
 
