--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@ amzn_assoc_emphasize_categories = "13900861,2335752011,13900871";
 <a href="http://chall.tasteless.eu/">8. Tasteless</a><br>
 <a href="http://escape.alf.nu/">9. alert(1)</a><br>
 <a href="http://prompt.ml/0">10. prompt(1)</a><br>
+<a href="https://websec.fr/">11. Websec labs</a>
 
 <p>Vulnerable Web Application</p>
 <a href="https://sourceforge.net/projects/bwapp/">1. bWAPP</a><br>
@@ -38,7 +39,8 @@ amzn_assoc_emphasize_categories = "13900861,2335752011,13900871";
 <a href="https://github.com/WebGoat/WebGoat">3. Web Goat</a><br>
 <a href="http://www.dvwa.co.uk/">4. DVWA</a><br>
 <a href="https://github.com/snoopythesecuritydog/dvws">5. DVWS</a><br>
+<a href="https://github.com/s4n7h0/xvwa">6. XVWA</a>
 
-<p>Send me more resource, If you know. We will add it.</p>
+<p>For more resources, labs, solutions contact me :)</p>
 
 
