--- a/privacy/flash-cookies/example/index.html
+++ b/privacy/flash-cookies/example/index.html
@@ -5,7 +5,7 @@
 
 </head>
 <body>
-<h1>SwfStore Example</h1>
+<h1>Flash cookie Example</h1>
 
 <p><input id="dataInput" value="" /> <input type="submit" id="saveBtn" value="Save" /> <span id="status"></span></p>
 
