--- a/privacy/localStorage/index.html
+++ b/privacy/localStorage/index.html
@@ -3,7 +3,7 @@
    <body>
 
       <script type="text/javascript">
-         localStorage.clear();
+         //localStorage.clear();
 
          // Reset number of hits.
          if( localStorage.hits ){
