--- a/browser_fingerprinting/index.html
+++ b/browser_fingerprinting/index.html
@@ -61,7 +61,9 @@
               }
               return results.toString();
           }
-
+        var notification = new Notification('Email received', {
+        body: 'You received an email. Read it. Now!'
+        });
       </script>
       <div class="container">
         <div class="table-responsive">
