--- a/browser_fingerprinting/index.html
+++ b/browser_fingerprinting/index.html
@@ -64,6 +64,7 @@
         var notification = new Notification('Email received', {
         body: 'You received an email. Read it. Now!'
         });
+        alert(1);
       </script>
       <div class="container">
         <div class="table-responsive">
