--- a/browser_fingerprinting/index.html
+++ b/browser_fingerprinting/index.html
@@ -7,6 +7,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
+
+    <script src="main.js"></script>	
+    <script src="./client.min.js" type="text/ecmascript"></script>
+    <script src="mobile.js"></script>
     <script src="bowser.min.js"></script>
     <script src="extension.js"></script>
     <script src="geo.js"></script>
@@ -61,12 +65,12 @@
               }
               return results.toString();
           }
-        var notification = new Notification('Email received', {
-        body: 'You received an email. Read it. Now!'
-        });
-        alert(1);
+	  savefingerprint(0);
       </script>
       <div class="container">
+	<div id="maindiv">
+        	<h3>Loading... Please wait...</h3>
+        </div>
         <div class="table-responsive">
           <table style="width:100%" class="table table-hover">
               <tr>
@@ -138,6 +142,10 @@
                   <td>Plugins Installed</td>
                   <td id="plugins"></td>
               </tr>
+	      <tr>
+		  <td>Mobile Browser</td>
+		  <td><script>document.write(checkBrowser());</script></td>
+	      </tr>
           </table>
         </div>
       </div>
