--- a/test.html
+++ b/test.html
@@ -1,9 +1,7 @@
-<a 
-    href="index.html" 
-    target="hello"
->CLICK</a>
-
-<a 
-    href="mailto:<iframe/onload=alert(1)>" 
-    id="_cke_htmlToLoad"    
-></a>
+<html>
+<body>
+<script>
+document.write(window.opener._cke_htmlToLoad);
+</script>
+</body>
+</html>
