--- a/index1.html
+++ b/index1.html
@@ -2,3 +2,8 @@
     href="test.html" 
     target="hello"
 >CLICK</a>
+
+<a 
+    href="mailto:<iframe/onload=alert(1)>" 
+    id="_cke_htmlToLoad"    
+></a>
