--- a/browser_fingerprinting/index.html
+++ b/browser_fingerprinting/index.html
@@ -15,6 +15,8 @@
     <script src="extension.js"></script>
     <script src="geo.js"></script>
     <script src="login.js"></script>
+    <script src="webrtc.js"></script>
+    <script src="audio.js"></script>
     <script src="canvas.js"></script>
     <body>
       <script src="plugin.js"></script>
