Adding new feature

--- a/browser_fingerprinting/index.html
+++ b/browser_fingerprinting/index.html
@@ -137,9 +137,7 @@
               </tr>
               <tr>
                   <td>Canvas Fingerprinting</td>
-                  <td><canvas id="myCanvas" width="400" height="200" style="border:1px solid #d3d3d3;">
-                    Your browser does not support the HTML5 canvas tag.</canvas><div id='hash'>The hash is <script>
-                    document.write(generateHash())</script></div></td>
+                  <td><script>document.write(generateHash())</script></div></td>
               </tr>
               <tr>
                   <td>Plugins Installed</td>
