--- a/_posts/2021-04-16-Setup-Strapi-new-project.html
+++ b/_posts/2021-04-16-Setup-Strapi-new-project.html
@@ -33,10 +33,11 @@ $ curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
 
 <blockquote>
   $ node --version
-  v14.2.0
+  <br>
+  v14.2.0<br><br>
 
-  $ npm --version
-  6.14.4 
+  $ npm --version<br>
+  6.14.4 <br>
 </blockquote>
 
 <p>compile native addons from npm you’ll need to install the development tools</p>
@@ -51,11 +52,19 @@ $ curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
   $ npx create-strapi-app my-project --quickstart
 </blockquote>
 
-<p>Create an Administrator user
+<p>Create an Administrator user.<br>
 
-Navigate to http://localhost:1337/admin (opens new window).
+Navigate to http://localhost:1337/admin (opens new window).<br>
 
-Complete the form to create the first Administrator user
+Complete the form to create the first Administrator user.<br>
+
+<a href="#">
+  <img src="{{ site.baseurl }}/img/template_blog_admin_425eca3a96.png" alt="Post Sample Image">
+</a>
+
+<a href="#">
+  <img src="{{ site.baseurl }}/img/strapi.png" alt="Post Sample Image">
+</a>
 </p>
 
 <p>Thank you for patiently reading my blog!</p>
